Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62193

[macOS] 'About' and 'Quit' menu items get disabled if an application closes one of its multiple windows

XMLWordPrintable

    • macOS
    • 689606de91faecf91f1f92e8d355789d9be62d2f

      If a window in a multi-window Qt application is closed then the 'About' and 'Quit' menu items are disabled in the remaining open windows. This behavior seems to be related to the macOS native menubar and its treatment of 'About' and 'Quit' items.

      Steps to reproduce:

      • Run the sample attached.
      • Click on the "Clone Window" button -> new window appears.
      • Close the newly opened window.
      • Check the menu bar of the remaining window.
        EXPECTED: 'About' and 'Quit' menu items are enabled.
        ACTUAL: 'About' and 'Quit' menu items are disabled.

        For Gerrit Dashboard: QTBUG-62193
        # Subject Branch Project Status CR V

            andysh Andy Shaw
            risto.sipola Risto Sipola
            Votes:
            6 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes